no commit message given

--- a/src/numpy/demos/numpy_ref.ipynb
+++ b/src/numpy/demos/numpy_ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,45 +19,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr1 = np.array([1,2,3])\n",
-    "arr1 = np.array([1,5,2],dtype=np.float64)\n",
-    "arr1 = np.arange(1,5,2) \n",
-    "arr1 = np.r_[1:13].reshape(3,4)\n",
-    "arr1 = np.linspace(1,4,13)\n",
-    "arr1 = np.random.randn(100)\n",
-    "arr1 = np.eye(4)\n",
-    "arr1 = np.zeros((3,3))\n",
-    "arr1 = np.ones(8)\n",
-    "arr1 = np.diag([1,2,3])\n",
-    "arr1 = np.full((3,4),5)\n",
-    "arr1 = np.empty((4,3))\n",
-    "arr1 = np.c_[3:7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[5, 5, 5, 5],\n",
-       "       [5, 5, 5, 5],\n",
-       "       [5, 5, 5, 5]])"
+       "array([[3],\n",
+       "       [4],\n",
+       "       [5],\n",
+       "       [6]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr1"
+    "arr = np.array([1,2,3])\n",
+    "arr = np.array([1,5,2],dtype=np.float64)\n",
+    "arr = np.arange(1,5,2) \n",
+    "arr = np.r_[1:13].reshape(3,4)\n",
+    "arr = np.linspace(1,4,13)\n",
+    "arr = np.random.randn(100)\n",
+    "arr = np.eye(4)\n",
+    "arr = np.zeros((3,3))\n",
+    "arr = np.ones(8)\n",
+    "arr = np.diag([1,2,3])\n",
+    "arr = np.full((3,4),5)\n",
+    "arr = np.empty((4,3))\n",
+    "arr = np.c_[3:7]\n",
+    "arr"
    ]
   },
   {
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +81,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +124,7 @@
        "array([200,   2, 200,  55])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,27 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.sum(a)\n",
     "np.mean(a)\n",
     "np.cumsum(a)\n",
     "np.max(a)\n",
     "np.corrcoef(a)\n",
-    "mask = np.array([0,0,1,0,1],dtype=bool)\n",
+    "mask = np.array([0,0,1,0,1,0,0,1,0,1,1],dtype=bool)\n",
     "b = a[mask]"
    ]
   },
@@ -184,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,18 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0,  1,  2,  3,  0,  2,  4,  6],\n",
-       "       [ 4,  5,  6,  7,  8, 10, 12, 14],\n",
-       "       [ 8,  9, 10, 11, 16, 18, 20, 22]])"
+       "array([ 0,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,14 +197,21 @@
     "np.append(a,a)\n",
     "np.insert(a,1,1)\n",
     "np.delete(a,1)\n",
-    "np.vstack((a,b))\n",
-    "np.hstack((a,b))"
+    "# np.vstack((a,b))\n",
+    "# np.hstack((a,b))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -238,9 +225,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
