--- a/src/numpy/demos/numpy_examples.ipynb
+++ b/src/numpy/demos/numpy_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "       [17, 28, 39]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "       [17, 28, 39]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,31 +81,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0],\n",
-       "       [10],\n",
-       "       [20],\n",
-       "       [30]])"
+       "(array([ 0, 10, 20, 30]),\n",
+       " array([[ 0],\n",
+       "        [10],\n",
+       "        [20],\n",
+       "        [30]]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "aa = np.array((0,10,20,30))\n",
-    "aa[:,None]"
+    "aa, aa[:,None]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
        "       [30]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,75 +159,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = np.random.rand(4,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.28896417, 0.20955053, 0.34602068, 0.3616987 , 0.6552899 ],\n",
-       "       [0.75913177, 0.8210829 , 0.72531356, 0.11141005, 0.36017697],\n",
-       "       [0.69401323, 0.20494531, 0.78222935, 0.433829  , 0.0828861 ],\n",
-       "       [0.74001173, 0.55760825, 0.24520406, 0.05575878, 0.16238835]])"
+       "array([[0.10342523, 0.97429611, 0.40524363, 0.36943818, 0.4547219 ],\n",
+       "       [0.42836107, 0.52821546, 0.12493705, 0.70568247, 0.52725052],\n",
+       "       [0.47120899, 0.73871621, 0.32418498, 0.73524378, 0.32749118],\n",
+       "       [0.70228526, 0.36200201, 0.03343981, 0.49295646, 0.29802284]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "arr = np.random.rand(4, 5)\n",
     "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"data1\",arr)\n",
-    "np.savetxt(\"data1.txt\",arr)"
+    "np.savetxt(\"data1.txt\",arr)\n",
+    "np.savez(\"data1\", arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr2=np.load(\"data1.npy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.28896417, 0.20955053, 0.34602068, 0.3616987 , 0.6552899 ],\n",
-       "       [0.75913177, 0.8210829 , 0.72531356, 0.11141005, 0.36017697],\n",
-       "       [0.69401323, 0.20494531, 0.78222935, 0.433829  , 0.0828861 ],\n",
-       "       [0.74001173, 0.55760825, 0.24520406, 0.05575878, 0.16238835]])"
+       "array([[0.10342523, 0.97429611, 0.40524363, 0.36943818, 0.4547219 ],\n",
+       "       [0.42836107, 0.52821546, 0.12493705, 0.70568247, 0.52725052],\n",
+       "       [0.47120899, 0.73871621, 0.32418498, 0.73524378, 0.32749118],\n",
+       "       [0.70228526, 0.36200201, 0.03343981, 0.49295646, 0.29802284]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "arr2=np.load(\"data1.npy\")\n",
     "arr2"
    ]
   },
@@ -267,6 +253,28 @@
    "metadata": {},
    "source": [
     "## Custom type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['1', '2.0', 'Hello'],\n",
+       "       ['2', '3.0', 'World']], dtype='<U32')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([(1,2.0,\"Hello\"), (2,3.0,\"World\")])\n",
+    "a"
    ]
   },
   {
@@ -479,6 +487,7 @@
     "        self.__real = real\n",
     "        self.__img = img\n",
     "    def __add__(self,b):\n",
+    "        # assert isinstance(b, Complex)\n",
     "        res = Complex(self.__real +b.__real, self.__img + b.__img)\n",
     "        return res\n",
     "    def __str__(self):\n",
@@ -1628,7 +1637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1642,9 +1651,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
